# izp_project_2

./: CMakeLists.txt  README.md  sps.c  spsWOUTREFRACTORING.c  tab.txt
